2005-08-08  Nick Garnett  <nickg@ecoscentric.com>

	* src/eb55_flash.c: Removed unnecessary external reference.

2005-08-04  Nick Garnett  <nickg@ecoscentric.com>

	* cdl/flash_eb55.cdl:
	* src/eb55_flash.c: Added configuration for dataflash driver.

2004-11-12  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/flash_eb55.cdl: Enable the hardware bug workaround in the
	generic flash driver

2003-07-15  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/eb55_flash.c: Generic Atmel driver now supports boot blocks.
	Other tweaks for the generic Atmel driver changes.

2003-05-12  Nick Garnett  <nickg@balti.calivar.com>

	* src/eb55_flash.c: 
	* cdl/flash_eb55.cdl:
	Added Flash driver for Atmel EB55 board.

//===========================================================================
// ####GPLCOPYRIGHTBEGIN####                                                
// -------------------------------------------                              
// This file is part of eCos, the Embedded Configurable Operating System.   
// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003, 2005 Free Software Foundation, Inc.
//
// This program is free software; you can redistribute it and/or modify     
// it under the terms of the GNU General Public License as published by     
// the Free Software Foundation; either version 2 or (at your option) any   
// later version.                                                           
//
// This program is distributed in the hope that it will be useful, but      
// WITHOUT ANY WARRANTY; without even the implied warranty of               
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU        
// General Public License for more details.                                 
//
// You should have received a copy of the GNU General Public License        
// along with this program; if not, write to the                            
// Free Software Foundation, Inc., 51 Franklin Street,                      