@@ -1,3 +1,9 @@
+2009-02-12  Nick Garnett  <nickg@ecoscentric.com>
+
+	* src/spi_eb55.c: Export static structure for dataflash SPI device
+	rather than pointer. The latter cannot be used in the initializer
+	for a dataflash flash driver.
+
 2006-06-01  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* cdl/spi_eb55.cdl: Updates needed for recent changes to AT91 SPI
